--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     
+   <link rel="stylesheet" href="style.css" />
   <body>
     <nav class="navbar navbar-expand-lg bg-white fixed-top">
       <div class="container">
